# yuv420-bmp-overlay

./: .gitignore  CMakeLists.txt  README.md  bmp_test.html  build_Linux.sh  build_Win.bat
Application/: RGB_TO_YUV.xmcd
src/: bmp_reader.cpp  bmp_reader.h  config.cpp  config.h  main.cpp  overlay.cpp  overlay.h  rgb_to_yuv.cpp  rgb_to_yuv.h  yuv_rw.cpp  yuv_rw.h
